fixed border-left bug on small viewport

--- a/styles/dashboardStyles.css
+++ b/styles/dashboardStyles.css
@@ -34,4 +34,10 @@ a{
   .nav-link{
     padding: 20px;
   }
+  .active{
+    border-left: none;
+  }
+  .nav-link:hover{
+    border-left:none;
+  }
 }
